feat: complete v83 state and inventory capability